// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Upload > Snapshots > should match snapshot with default props 1`] = `
<div>
  <div
    class="tiger-upload"
  >
    <input
      aria-hidden="true"
      style="display: none;"
      type="file"
    />
    <button
      aria-label="Upload file"
      class="inline-flex items-center justify-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium transition-colors duration-200 bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[var(--tiger-primary,#2563eb)] cursor-pointer"
      type="button"
    >
      Select File
    </button>
  </div>
</div>
`;

exports[`Upload > Snapshots > should match snapshot with drag mode 1`] = `
<div>
  <div
    class="tiger-upload"
  >
    <input
      accept="image/*"
      aria-hidden="true"
      style="display: none;"
      type="file"
    />
    <div
      aria-disabled="false"
      aria-label="Upload file by clicking or dragging"
      class="flex flex-col items-center justify-center w-full px-6 py-8 border-2 border-dashed rounded-lg transition-all duration-200 border-gray-300 hover:border-[var(--tiger-primary,#2563eb)] hover:bg-gray-50 cursor-pointer"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="w-12 h-12 mb-3 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <p
        class="mb-2 text-sm"
      >
        <span
          class="font-semibold"
        >
          Click to upload
        </span>
         or drag and drop
      </p>
      <p
        class="text-xs text-gray-500"
      >
        Accepted: 
        image/*
      </p>
      <p
        class="text-xs text-gray-500"
      >
        Max size: 
        5.00 MB
      </p>
    </div>
  </div>
</div>
`;

exports[`Upload > Snapshots > should match snapshot with file list 1`] = `
<div>
  <div
    class="tiger-upload"
  >
    <input
      aria-hidden="true"
      style="display: none;"
      type="file"
    />
    <button
      aria-label="Upload file"
      class="inline-flex items-center justify-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium transition-colors duration-200 bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[var(--tiger-primary,#2563eb)] cursor-pointer"
      type="button"
    >
      Select File
    </button>
    <ul
      aria-label="Uploaded files"
      class="mt-4 space-y-2"
      role="list"
    >
      <li
        class="flex items-center justify-between px-3 py-2 rounded transition-colors duration-200 bg-green-50 text-green-700 hover:bg-green-100"
      >
        <div
          class="flex items-center flex-1 min-w-0"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5 mr-2 flex-shrink-0"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <div
            class="flex-1 min-w-0"
          >
            <p
              class="text-sm font-medium truncate"
            >
              test1.jpg
            </p>
            <p
              class="text-xs text-gray-500"
            >
              1.00 KB
            </p>
          </div>
        </div>
        <div
          class="flex items-center space-x-2 ml-4"
        >
          <svg
            aria-label="Success"
            class="w-5 h-5 text-green-500"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
              fill-rule="evenodd"
            />
          </svg>
          <button
            aria-label="Remove test1.jpg"
            class="text-gray-400 hover:text-red-500 transition-colors"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="flex items-center justify-between px-3 py-2 rounded transition-colors duration-200 bg-blue-50 text-blue-700"
      >
        <div
          class="flex items-center flex-1 min-w-0"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5 mr-2 flex-shrink-0"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <div
            class="flex-1 min-w-0"
          >
            <p
              class="text-sm font-medium truncate"
            >
              test2.png
            </p>
          </div>
        </div>
        <div
          class="flex items-center space-x-2 ml-4"
        >
          <svg
            aria-label="Uploading"
            class="w-5 h-5 text-blue-500 animate-spin"
            fill="none"
            viewBox="0 0 24 24"
          >
            <circle
              class="opacity-25"
              cx="12"
              cy="12"
              r="10"
              stroke="currentColor"
              stroke-width="4"
            />
            <path
              class="opacity-75"
              d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
              fill="currentColor"
            />
          </svg>
          <button
            aria-label="Remove test2.png"
            class="text-gray-400 hover:text-red-500 transition-colors"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="flex items-center justify-between px-3 py-2 rounded transition-colors duration-200 bg-red-50 text-red-700 hover:bg-red-100"
      >
        <div
          class="flex items-center flex-1 min-w-0"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5 mr-2 flex-shrink-0"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <div
            class="flex-1 min-w-0"
          >
            <p
              class="text-sm font-medium truncate"
            >
              test3.pdf
            </p>
          </div>
        </div>
        <div
          class="flex items-center space-x-2 ml-4"
        >
          <svg
            aria-label="Error"
            class="w-5 h-5 text-red-500"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
              fill-rule="evenodd"
            />
          </svg>
          <button
            aria-label="Remove test3.pdf"
            class="text-gray-400 hover:text-red-500 transition-colors"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Upload > Snapshots > should match snapshot with picture-card list type 1`] = `
<div>
  <div
    class="tiger-upload"
  >
    <input
      aria-hidden="true"
      style="display: none;"
      type="file"
    />
    <button
      aria-label="Upload file"
      class="inline-flex items-center justify-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium transition-colors duration-200 bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[var(--tiger-primary,#2563eb)] cursor-pointer"
      type="button"
    >
      Select File
    </button>
    <div
      class="flex flex-wrap gap-2 mt-4"
    >
      <div
        class="relative inline-flex items-center justify-center w-32 h-32 border rounded-lg overflow-hidden transition-all duration-200 border-gray-300 hover:border-blue-400"
      >
        <img
          alt="test.jpg"
          class="w-full h-full object-cover"
          src="https://example.com/test.jpg"
        />
        <div
          class="absolute inset-0 bg-black bg-opacity-0 hover:bg-opacity-50 transition-all flex items-center justify-center space-x-2 opacity-0 hover:opacity-100"
        >
          <button
            aria-label="Preview test.jpg"
            class="text-white hover:text-blue-200 transition-colors"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="Remove test.jpg"
            class="text-white hover:text-red-200 transition-colors"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-6 h-6"
              fill="currentColor"
              viewBox="0 0 20 20"
            >
              <path
                clip-rule="evenodd"
                d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
